[gd_scene load_steps=4 format=3 uid="uid://btpoog8cql84n"]

[ext_resource type="Texture2D" uid="uid://c32cyuudt3x6x" path="res://assets/sprites/traits/noble.png" id="1_jdvgg"]
[ext_resource type="Script" uid="uid://bk8hndfd16ejy" path="res://scenes/tooltip/item_trait_tooltip.gd" id="1_mg3hy"]
[ext_resource type="FontFile" uid="uid://8di0jvr25vat" path="res://assets/font/m5x7.ttf" id="2_mg3hy"]

[node name="ItemTraitTooltip" type="VBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_mg3hy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PopupIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_jdvgg")
stretch_mode = 5

[node name="PopupTitle" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Popup title"
vertical_alignment = 1

[node name="PopupDescription" type="RichTextLabel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_mg3hy")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Here's the detailed 
description of the popup 
window. Here's the
detailed description
of the popup window."
fit_content = true
scroll_active = false
autowrap_mode = 0
